--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,14 @@
 {
     "version": 1,
-    "build": {
-        "src": "server.js",
-        "use": "@vercel/node"
-    },
+    "builds": [
+        {
+            "use": "@vercel/node",
+            "config": {
+                "maxLambdaSize": "50mb"
+            },
+            "src": "server.js"
+        }
+    ],
     "routes": [
         {
             "src": "(.*)",
