--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,11 @@
   "name": "backendchat",
   "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"  
+  },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.7",
